add oauth2 with google

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -47,6 +47,16 @@ exception.auth.accountLocked=Account locked
 exception.auth.accountDisabled=Account disabled
 exception.auth.credentialsExpired=Credentials expired
 
+# OAuth2 authorization exception
+exception.oauth2.authorizationCode.notFound=No valid credentials found
+exception.oauth2.authorizationCode.clientError=Error authenticating via Google
+exception.oauth2.authorizationCode.serverError=Unable to access Google
+exception.oauth2.authorizationCode.exception=An error occurred during authentication, please try again later
+exception.oauth2.userinfo.notFound=Account information not found from Google
+exception.oauth2.userinfo.clientError=Error retrieving account information from Google
+exception.oauth2.userinfo.serverError=Unable to access Google
+exception.oauth2.userinfo.exception=An error occurred while retrieving account information from Google, please log in again
+
 # Uncertain exception
 exception.uncertain=Uncertain error
 exception.nullPointer=The requested data is missing or corrupted, please check or try again later
