--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -51,6 +51,16 @@ exception.auth.accountLocked=Tài khoản đã bị khóa
 exception.auth.accountDisabled=Tài khoản đã bị dừng hoạt động
 exception.auth.credentialsExpired=Thông tin xác thực đã hết hạn
 
+# OAuth2 authorization exception
+exception.oauth2.authorizationCode.notFound=Không tìm thấy thông tin xác thực hợp lệ
+exception.oauth2.authorizationCode.clientError=Lỗi khi xác thực thông qua Google
+exception.oauth2.authorizationCode.serverError=Không thể truy cập Google
+exception.oauth2.authorizationCode.exception=Có lỗi xảy ra trong quá trình xác thực, vui lòng thử lại sau
+exception.oauth2.userinfo.notFound=Không tìm thấy thông tin tài khoản từ Google
+exception.oauth2.userinfo.clientError=Lỗi khi lấy thông tin tài khoản từ Google
+exception.oauth2.userinfo.serverError=Không thể truy cập Google
+exception.oauth2.userinfo.exception=Có lỗi xảy ra trong quá trình truy xuất thông tin tài khoản từ Google, vui lòng đăng nhập lại
+
 # Validate account info exception
 exception.account.register.failed=Đăng ký thất bại, vui lòng thử lại sau
 exception.account.notExisted=Tài khoản không tồn tại
